# blockchain-crypto

./: .gitignore  33  CMakeLists.txt  README.md  TECHNICAL_DOCS.md  quick-build.ps1
archive/: bigint.cpp  bigint.h  bigintfail.h
blockchain_saves/: ee
docs/superpowers/plans/: 2026-04-19-test-suite.md  2026-07-11-bigint-rewrite.md  2026-07-12-transaction-signature-verification.md
docs/superpowers/specs/: 2026-04-19-test-suite-design.md  2026-07-11-bigint-rewrite-design.md  2026-07-12-transaction-signature-verification-design.md
include/: Block.h  Blockchain.h  Transaction.h  utils.h
src/: Block.cpp  Blockchain.cpp  ECCrypto.cpp  P2PNode.cpp  Transaction.cpp  Wallet.cpp  bigint.cpp  main.cpp  sha.cpp  test_bigint.cpp  utils.cpp
src/include/: Block.h  Blockchain.h  ECCrypto.h  P2PMessage.h  P2PNode.h  Transaction.h  Wallet.h  bigint.h  bigint_v2.h  sha.h  utils.h
tests/: CMakeLists.txt
tests/integration/: chain_lifecycle_test.cpp  p2p_loopback_test.cpp
tests/support/: fixtures.h  vectors.h
tests/unit/: bigint_ops_test.cpp  bigint_test.cpp  bigint_v2_test.cpp  block_test.cpp  blockchain_test.cpp  eccrypto_test.cpp  p2p_message_test.cpp  sha_test.cpp  transaction_test.cpp  utils_test.cpp  wallet_test.cpp
